<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1862dp"
        android:layout_height="2113dp"
        app:srcCompat="@drawable/fon_login"
        tools:layout_editor_absoluteX="-155dp"
        tools:layout_editor_absoluteY="-682dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_lotos"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="90dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="100px"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="420dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="50px"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="471dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:text="@string/login_button"
        android:textSize="50px"
        app:cornerRadius="15dp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="567dp"
        android:backgroundTint="@color/light_green"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textColor="@color/white"
        android:textSize="50px"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="642dp" />
</androidx.constraintlayout.widget.ConstraintLayout>