<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="31dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSign" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="320dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/sign"
        android:textSize="25sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="320dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/profile"
        android:textSize="25sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_login" />

    <TextView
        android:id="@+id/tvSign"
        android:layout_width="123dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoLogin" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/light_green2"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/light_green2"
        android:textColorHint="@color/light_green2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSign" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/light_green2"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/light_green2"
        android:textColorHint="@color/light_green2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>