<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark_green">

    <ImageView
        android:id="@+id/ivMenuMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hamburger" />

    <ImageView
        android:id="@+id/ivLogoMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_login" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar2" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="24dp"
        android:text="@string/greeting"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGreetingSubtext"
        android:layout_width="325dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:alpha="0.7"
        android:text="@string/greeting_text_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting" />

    <LinearLayout
        android:id="@+id/llEmotions"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="26dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreetingSubtext">

        <!-- Calm -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEmotionCalm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_calm" />

            <TextView
                android:id="@+id/tvEmotionCalm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/calm_text"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEmotionRelaxed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_relaxed" />

            <TextView
                android:id="@+id/tvEmotionRelaxed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/relax_text"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEmotionFocused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_focused" />

            <TextView
                android:id="@+id/tvEmotionFocused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/focus_text"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEmotionExcited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_excited" />

            <TextView
                android:id="@+id/tvEmotionExcited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-11dp"
                android:text="@string/excited_text"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBlocks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llEmotions">

        <ImageView
            android:id="@+id/ivBlock1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/blok1" />

        <ImageView
            android:id="@+id/ivBlock2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/blok2" />

    </LinearLayout>

    <!-- Нижняя навигация -->
    <LinearLayout
        android:id="@+id/llNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnNavHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/btnNavMusic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_music" />

        <ImageButton
            android:id="@+id/btnNavProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:alpha="0.5"
            android:background="@null"
            app:srcCompat="@drawable/ic_profile_1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>